CVS-20100330
+ vektor -> vector
+ first preparations for ADP potentials
+ fix seed option, it actually never worked

CVS-20100312
+ fix simann for tabulated potentials

CVS-20100224
+ add d_eps parameter as an error margin in powell_lsq, can be set in param file
	via d_eps
+ write error report to a file (output_prefix.error)
	grep for "RMS" for force, energy, stress rms-error and total error sum in one line
+ cleaned up header file potfit.h
+ flagfile will be deleted if fit is terminated
+ [APOT] the punishment for bad parameters is controlled via "apot_punish" in parameter file
	default value is 0
	This applies only to restrictions, not for parameters out of bounds !

CVS-20100218
+ bump copyright years to 2010
+ [APOT] add a few new analytic potential functions

CVS-20100204
+ [MEAM] initial commit

CVS-20100204
+ [APOT] added support for global parameters, beta stage
+ [APOT] write correct embedding function for imd potentials
+ [APOT] fix parameter check
+ [general] more code cleanup, add some comments

CVS-20100125
+ split up force calculation in different files
+ update Makefile for EAM/MEAM and PAIR targets
+ [APOT] make imd potentials more consistant
+ [APOT] fix periodic parameters with smooth cutoff

CVS-20100111
+ [APOT] use new cutoff function
+ general code cleanup, hopefully everything still works as expected
+ only compile sources needed for the selected targets
+ make mkl default for x86_64-gcc

CVS-20091216
+ added option to assign different weights to configurations with #W option
+ fixed stress output
+ last stable version before major changes are commited (new cutoff, adp and maybe meam)

CVS-20091208
+ [APOT] fix invariant potentials

CVS-20091202
+ fix more uninitialized values
+ [APOT] fix rare segfault with universal function
+ evolution algorithm polished

CVS-20091120
+ [APOT] fix punishments for pair potentials
+ fix some memory leaks (experimental, may break mpi)